--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ html {
 .header {
     background-image: url(./images/desktop/image-header.jpg);
     width: 100%;
-    height: 70vh;
+    height: 90vh;
     background-position: center bottom;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -35,8 +37,8 @@ html {
 .contact {
     background-color: white;
     color: black;
-    padding: 0.5vw 1.5vw;
-    border-radius: 1.5vw;
+    padding: 1vw 3vw;
+    border-radius: 3vw;
 }
 
 .contact:hover {
@@ -45,12 +47,22 @@ html {
 }
 
 .header .header-slogan {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header .header-slogan .text {
     font-size: 4rem;
     font-family: Fraunces;
     font-weight: 700;
     color: white;
-    text-align: center;
     padding-top: 5vh;
     padding-right: 5vh;
     letter-spacing: 0.5rem;
+}
+
+.header .header-slogan .arrow {
+    margin-top: 18vh;
 }
