--- a/style.css
+++ b/style.css
@@ -3,10 +3,28 @@ html {
     padding: 0;
 }
 
+h1 {
+    font-family: Fraunces;
+    color: hsl(210, 30%, 17%);
+    margin-bottom: 10%;
+}
+
+h2 {
+    /*TODO Font too bold*/
+    font-family: Fraunces;
+}
+
+p {
+    font-family: Barlow;
+    font-size: 18px;
+    color: hsl(232, 10%, 55%);
+}
+
 .header {
     background-image: url(./images/desktop/image-header.jpg);
     width: 100%;
-    height: 90vh;
+    height: 80vh;
+    min-height: 600px;
     background-position: center bottom;
     background-size: cover;
     display: flex;
@@ -35,6 +53,8 @@ html {
 }
 
 .contact {
+    /*TODO Font too bold*/
+    font-family: Fraunces;
     background-color: white;
     color: black;
     padding: 1vw 3vw;
@@ -65,4 +85,31 @@ html {
 
 .header .header-slogan .arrow {
     margin-top: 18vh;
+}
+
+.section1 {
+    display: flex;
+}
+
+.section1 .left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+}
+
+.section1 .text-container {
+    width: 70%;
+}
+
+.section1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.section1 .left,
+.right {
+    width: 50%;
+    text-align: left;
 }
