--- a/style.css
+++ b/style.css
@@ -113,3 +113,30 @@ p {
     width: 50%;
     text-align: left;
 }
+
+.section2 {
+    display: flex;
+}
+
+.section2 .right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+}
+
+.section2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.section2 .text-container {
+    width: 70%;
+}
+
+.section2 .left,
+.right {
+    width: 50%;
+    text-align: left;
+}
